# tracecase

./: .countlines.cache.db  .gitignore  DELTA_MANIFEST.json  IMPLEMENTATION_RECEIPT.md  LICENSE  Makefile  README.md  count_lines.py  directory_structure.py  directory_structure.txt  pyproject.toml
.github/workflows/: ci.yml
apps/api/: requirements.txt
apps/reference-lab/: Dockerfile  README.md  docker-compose.yml  requirements.txt
apps/workbench/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
docs/adr/: 0001-file-backed-source-of-truth.md  0002-immutable-pydantic-contracts.md  0003-partial-time-order.md  0004-ground-truth-vs-observed-evidence.md  0005-derived-graph-is-additive.md  0006-generic-bundle-supplements.md  0007-invariant-results-are-multi-valued.md  0008-findings-remain-bounded-interpretations.md  0009-semantic-alignment-ignores-run-local-identities.md  (+7 more)
registries/: registry.json
scripts/: build_delta.py  check_architecture.py  check_workbench_syntax.cjs  generate_milestone_b_fixtures.py  generate_milestone_c_fixtures.py  generate_milestone_d_fixtures.py  generate_milestone_e_fixtures.py  generate_sample_bundle.py  validate.sh
tests/: conftest.py  test_analyzers.py  test_bundle.py  test_bundle_supplements.py  test_canonical.py  test_collectors.py  test_compare.py  test_compat.py  test_coverage.py  test_execution_model.py  test_extensions.py  test_graph.py  test_invariants.py  test_milestone_c_bundles.py  test_pathforge.py  test_policy.py  test_primitives.py  test_reference_lab.py  test_scenarios.py  test_sdk.py  test_synthetic.py
(+569 files in other folders)
