[project]
name = "tracecase-workspace"
version = "0.4.0"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "ruff>=0.8,<1",
  "mypy>=1.13,<2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "packages/tracecase-model/src",
  "packages/tracecase-bundle/src",
  "packages/tracecase-cli/src",
  "packages/tracecase-scenarios/src",
  "packages/tracecase-collectors/src",
  "packages/tracecase-graph/src",
  "packages/tracecase-invariants/src",
  "packages/tracecase-analyzers/src",
  "packages/tracecase-compare/src",
  "packages/tracecase-policy/src",
  "packages/tracecase-lab/src",
]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
mypy_path = [
  "packages/tracecase-model/src",
  "packages/tracecase-bundle/src",
  "packages/tracecase-cli/src",
  "packages/tracecase-scenarios/src",
  "packages/tracecase-collectors/src",
  "packages/tracecase-graph/src",
  "packages/tracecase-invariants/src",
  "packages/tracecase-analyzers/src",
  "packages/tracecase-compare/src",
  "packages/tracecase-policy/src",
  "packages/tracecase-lab/src",
]
